Reduce dark theme contrast to avoid eye strain
Switch to BG: #121212 and 87% opaque text as recommended by Material Design.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 @media (prefers-color-scheme: dark) {
     body {
-        background-color: black;
-        filter: invert(1) hue-rotate(180deg)
+        background-color: #121212;
+        color: rgba(255, 255, 255, 0.87);
+    }
+    a {
+        filter: invert(0.85) hue-rotate(180deg);
     }
 }
 
